@@ -8,9 +8,13 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.util.Comparator;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
+
 
 @Service
 public class TaskService {
@@ -29,13 +33,18 @@ public class TaskService {
         return taskRepository.save(task);
     }
 
-    public Task updateTask(UUID id, Task taskDetails) {
-        Task task = taskRepository.findById(id).orElseThrow(() -> new RuntimeException("Task not found"));
+    public Task updateTask(UUID id, TaskDto taskDetails) {
+        Optional<Task> taskOptional = taskRepository.findById(id);
+        if (taskOptional.isEmpty()){
+            return null;
+        }
+        Task task = taskOptional.get();
         task.setTitle(taskDetails.getTitle());
         task.setDescription(taskDetails.getDescription());
         task.setStartDate(taskDetails.getStartDate());
         task.setEndDate(taskDetails.getEndDate());
         task.setPriority(taskDetails.getPriority());
+        task.setStatus(taskDetails.getStatus());
         return taskRepository.save(task);
     }
 
@@ -44,40 +53,45 @@ public class TaskService {
         taskRepository.delete(task);
     }
 
-    public List<Task> getAllTasks(String keyword, Integer status, String sortBy) {
-        List<Task> tasks = taskRepository.findAll();
+    public List<TaskDto> getAllTasks(String userId) {
+        List<Task> tasks = taskRepository.findAll().stream().filter(task -> Objects.equals(task.getUserId().toString(), userId))
+                .toList();
 
-        if (keyword != null && !keyword.isEmpty()) {
-            tasks = taskRepository.findByTitleContainingIgnoreCase(keyword);
-        }
-
-        if (status != null) {
-            tasks = tasks.stream().filter(t -> t.getStatus().equals(status)).toList();
-        }
-
-        if (sortBy != null && sortBy.equals("priority")) {
-            tasks = tasks.stream().sorted(Comparator.comparing(Task::getPriority)).toList();
-        }
-
-        return tasks;
+        return tasks.stream()
+                .map(task ->
+            new TaskDto(task.getId(),task.getTitle(), task.getDescription(), task.getStartDate(), task.getEndDate(), task.getStatus(), task.getPriority(), task.getUserId()))
+                .collect(Collectors.toList());
     }
-
+    public TaskDto getTask(UUID id){
+        var task= taskRepository.findById(id);
+        if (task.isEmpty()){
+            return null;
+        }
+        var currentTask = task.get();
+        return new TaskDto(currentTask.getId(),currentTask.getTitle(),
+                currentTask.getDescription(),currentTask.getStartDate(),
+                currentTask.getEndDate(),currentTask.getStatus(),currentTask.getPriority(),
+                currentTask.getUserId());
+    }
     public Task updateStatus(UUID id, Integer newStatus) {
-        Task task = taskRepository.findById(id).orElseThrow(() -> new RuntimeException("Task not found"));
-        task.setStatus(newStatus);
-        return taskRepository.save(task);
+        Optional<Task> task = taskRepository.findById(id);
+        if(task.isEmpty()){
+            System.out.println("task null");
+            return null;
+        }
+        Task tasks = task.get();
+        tasks.setStatus(newStatus);
+        return taskRepository.save(tasks);
     }
-    @Scheduled(cron = "0 0 2 * * *")
+    @Scheduled(cron = "0 0 1 * * *")
     public void autoUpdateStatus() {
         List<Task> tasks = taskRepository.findAll();
         LocalDate today = LocalDate.now();
 
         for (Task task : tasks) {
-            if (task.getEndDate() != null && today.isAfter(task.getEndDate())) {
+            if (task.getEndDate() != null && LocalDateTime.now().isAfter(task.getEndDate())) {
                 task.setStatus(5); // quá hạn
-            } else if (task.getStartDate() != null && today.isAfter(task.getStartDate().minusDays(1)) && today.isBefore(task.getEndDate().plusDays(1))) {
-                task.setStatus(2); // đang thực hiện
-            } else if (task.getStartDate() != null && today.isBefore(task.getStartDate())) {
+            } else if (task.getStartDate() != null && LocalDateTime.now().isBefore(task.getStartDate())) {
                 task.setStatus(1); // chưa bắt đầu
             }
             taskRepository.save(task);
